Bagged Trees, Random Forest

--- a/notebooks/amazon_eda.ipynb
+++ b/notebooks/amazon_eda.ipynb
@@ -12,18 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from imblearn.over_sampling import SMOTE\n",
     "from sklearn.tree import DecisionTreeClassifier \n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.ensemble import BaggingClassifier, RandomForestClassifier\n",
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer"
    ]
   },
@@ -1247,6 +1248,191 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.49852292768959433"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Bagged Trees\n",
+    "\n",
+    "# Instantiate a BaggingClassifier\n",
+    "bagged_tree =  BaggingClassifier(DecisionTreeClassifier(criterion='gini', max_leaf_nodes=100), \n",
+    "                                 n_estimators=20)\n",
+    "\n",
+    "# Fit to the training data\n",
+    "bagged_tree.fit(X_train_resampled, y_train_resampled)\n",
+    "\n",
+    "bagged_tree.score(X_train_resampled, y_train_resampled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5543, 1987, 1081,  391,   70],\n",
+       "       [2174, 4787, 1214,  604,  293],\n",
+       "       [1381, 1843, 3339, 1685,  824],\n",
+       "       [ 419,  984, 1351, 3382, 2936],\n",
+       "       [ 191,  683,  661, 1975, 5562]])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_hat_bagged = bagged_tree.predict(X_train_resampled)\n",
+    "\n",
+    "cm_bagged = confusion_matrix(y_train_resampled, y_hat_bagged)\n",
+    "cm_bagged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.57      0.61      0.59      9072\n",
+      "           2       0.47      0.53      0.49      9072\n",
+      "           3       0.44      0.37      0.40      9072\n",
+      "           4       0.42      0.37      0.40      9072\n",
+      "           5       0.57      0.61      0.59      9072\n",
+      "\n",
+      "    accuracy                           0.50     45360\n",
+      "   macro avg       0.49      0.50      0.49     45360\n",
+      "weighted avg       0.49      0.50      0.49     45360\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_train_resampled, y_hat_bagged))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6006834215167548"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Instantiate and fit a RandomForestClassifier\n",
+    "forest = RandomForestClassifier(n_estimators=100, max_depth = 10)\n",
+    "forest.fit(X_train_resampled, y_train_resampled)\n",
+    "forest.score(X_train_resampled, y_train_resampled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6109, 1816,  609,  445,   93],\n",
+       "       [1390, 6273,  617,  509,  283],\n",
+       "       [ 954, 1676, 4468, 1077,  897],\n",
+       "       [ 312, 1012,  935, 4262, 2551],\n",
+       "       [ 180,  694,  548, 1515, 6135]])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_hat_forest = forest.predict(X_train_resampled)\n",
+    "\n",
+    "cm_forest = confusion_matrix(y_train_resampled, y_hat_forest)\n",
+    "cm_forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.68      0.67      0.68      9072\n",
+      "           2       0.55      0.69      0.61      9072\n",
+      "           3       0.62      0.49      0.55      9072\n",
+      "           4       0.55      0.47      0.50      9072\n",
+      "           5       0.62      0.68      0.64      9072\n",
+      "\n",
+      "    accuracy                           0.60     45360\n",
+      "   macro avg       0.60      0.60      0.60     45360\n",
+      "weighted avg       0.60      0.60      0.60     45360\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_train_resampled, y_hat_forest))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1293,15 +1479,6 @@
    "outputs": [],
    "source": [
     "# Ensemble Classifiers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Random Forest"
    ]
   },
   {
