--- a/notebooks/amazon_eda.ipynb
+++ b/notebooks/amazon_eda.ipynb
@@ -2,30 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
     "# !pip install vaderSentiment\n",
-    "# !pip install imblearn"
+    "# !pip install imblearn\n",
+    "# !pip install xgboost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "# from xgboost import XGBClassifier\n",
     "from imblearn.over_sampling import SMOTE\n",
     "from sklearn.tree import DecisionTreeClassifier \n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
-    "from sklearn.ensemble import BaggingClassifier, RandomForestClassifier\n",
-    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer"
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "from sklearn.ensemble import BaggingClassifier, RandomForestClassifier, AdaBoostClassifier, GradientBoostingClassifier"
    ]
   },
   {
@@ -1429,7 +1431,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Grid Search / Random Search to find optimal parameters"
+   ]
   },
   {
    "cell_type": "code",
@@ -1483,11 +1487,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4135361552028219"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# XGBoost"
+    "# Adaboost\n",
+    "# Instantiate an AdaBoostClassifier\n",
+    "clf_ab = AdaBoostClassifier()\n",
+    "\n",
+    "clf_ab.fit(X_train_resampled, y_train_resampled)\n",
+    "clf_ab.score(X_train_resampled, y_train_resampled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5671, 2031,  893,  381,   96],\n",
+       "       [4092, 2694, 1266,  729,  291],\n",
+       "       [2465, 1916, 1980, 1407, 1304],\n",
+       "       [ 788,  887, 1277, 2525, 3595],\n",
+       "       [ 627,  313,  604, 1640, 5888]])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_hat_ab = clf_ab.predict(X_train_resampled)\n",
+    "\n",
+    "cm_ab = confusion_matrix(y_train_resampled, y_hat_ab)\n",
+    "cm_ab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.42      0.63      0.50      9072\n",
+      "           2       0.34      0.30      0.32      9072\n",
+      "           3       0.33      0.22      0.26      9072\n",
+      "           4       0.38      0.28      0.32      9072\n",
+      "           5       0.53      0.65      0.58      9072\n",
+      "\n",
+      "    accuracy                           0.41     45360\n",
+      "   macro avg       0.40      0.41      0.40     45360\n",
+      "weighted avg       0.40      0.41      0.40     45360\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_train_resampled, y_hat_ab))"
    ]
   },
   {
@@ -1495,8 +1570,129 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.47872574955908287"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Adaboost"
+    "# Instantiate an GradientBoostingClassifier\n",
+    "clf_gb = GradientBoostingClassifier()\n",
+    "\n",
+    "clf_gb.fit(X_train_resampled, y_train_resampled)\n",
+    "clf_gb.score(X_train_resampled, y_train_resampled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5006, 2510,  981,  484,   91],\n",
+       "       [2230, 4487, 1328,  724,  303],\n",
+       "       [1283, 2270, 2888, 1642,  989],\n",
+       "       [ 312, 1100, 1260, 3366, 3034],\n",
+       "       [ 198,  646,  617, 1643, 5968]])"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_hat_gb = clf_gb.predict(X_train_resampled)\n",
+    "\n",
+    "cm_gb = confusion_matrix(y_train_resampled, y_hat_gb)\n",
+    "cm_gb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.55      0.55      0.55      9072\n",
+      "           2       0.41      0.49      0.45      9072\n",
+      "           3       0.41      0.32      0.36      9072\n",
+      "           4       0.43      0.37      0.40      9072\n",
+      "           5       0.57      0.66      0.61      9072\n",
+      "\n",
+      "    accuracy                           0.48     45360\n",
+      "   macro avg       0.47      0.48      0.47     45360\n",
+      "weighted avg       0.47      0.48      0.47     45360\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_train_resampled, y_hat_gb))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# XGBoost"
    ]
   },
   {
