--- a/notebooks/amazon.ipynb
+++ b/notebooks/amazon.ipynb
@@ -302,7 +302,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With newly balanced classes for our analysis, we ran a series of classification models against our data with varying results. Our Decision Trees and K Nearest Neighbors were the models best at explaining our training data. However, performance against our test data showed that in most cases our models still had significant room for improvement, with overfitting often being the culprit (for some random samples overfitting was much less of an issue, but it did often occur). Going forward this is something we will look to improve our models by addressing this problem."
+    "With newly balanced classes for our analysis, we ran a series of classification models against our data with varying results. For each model, we display a classification report and confusion matrix for training and test sets to quickly understand the \n",
+    "\n",
+    "Our Decision Trees and K Nearest Neighbors were the models best at explaining our training data. However, performance against our test data showed that in most cases our models still had significant room for improvement, with overfitting often being the culprit (for some random samples overfitting was much less of an issue, but it did often occur). Going forward this is something we will look to improve our models by addressing this problem."
    ]
   },
   {
