adding pickled logistic regression data

--- a/notebooks/wordcloud.ipynb
+++ b/notebooks/wordcloud.ipynb
@@ -7217,13 +7217,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
-    "pickle.dump( lr, open( \"save.p\", \"wb\" ) )"
+    "pickle.dump( lr, open( \"save.lr\", \"wb\" ) )\n",
+    "pickle.dump( test_data_features, open( \"save.tdf\", \"wb\" ) )\n",
+    "pickle.dump( y_test, open( \"save.yt\", \"wb\" ) )"
    ]
   },
   {
@@ -7255,7 +7257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr_pickled = pickle.load( open( \"save.p\", \"rb\" ) )"
+    "lr_pickled = pickle.load( open( \"save.lr\", \"rb\" ) )"
    ]
   },
   {
