adding presentation slides

--- a/notebooks/wordcloud.ipynb
+++ b/notebooks/wordcloud.ipynb
@@ -7426,10 +7426,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "plot_confusion_matrix() got an unexpected keyword argument 'display_labels'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-62-ef9105321145>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     disp = plot_confusion_matrix(lr, train_data_features, y_test,\n\u001b[1;32m      9\u001b[0m                                  \u001b[0mdisplay_labels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclass_names\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m                                  cmap=plt.cm.Blues)\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mdisp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0max_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_title\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: plot_confusion_matrix() got an unexpected keyword argument 'display_labels'"
+     ]
+    }
+   ],
+   "source": [
+    "np.set_printoptions(precision=2)\n",
+    "class_names = [1,2,3,4,5]\n",
+    "\n",
+    "# Plot non-normalized confusion matrix\n",
+    "titles_options = [(\"Confusion matrix, without normalization\", None),\n",
+    "                  (\"Normalized confusion matrix\", 'true')]\n",
+    "for title, normalize in titles_options:\n",
+    "    disp = plot_confusion_matrix(lr, train_data_features, y_test,\n",
+    "                                 display_labels=class_names,\n",
+    "                                 cmap=plt.cm.Blues, normalize=True)\n",
+    "    disp.ax_.set_title(title)\n",
+    "\n",
+    "    print(title)\n",
+    "    print(disp.confusion_matrix)\n",
+    "\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -7437,7 +7466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_confusion_matrix(clf_lr, X_train_resampled, y_train_resampled, title='Logistic Regression - Training Set (Normalized)')"
+    "show_confusion_matrix(lr, X_train_resampled, y_train_resampled, title='Logistic Regression - Training Set (Normalized)')"
    ]
   },
   {
