--- a/notebooks/amazon.ipynb
+++ b/notebooks/amazon.ipynb
@@ -7,7 +7,9 @@
     "<a id='top'></a>\n",
     "## Can Amazon Reviews Help Businesses Learn their Best Customers? \n",
     "\n",
-    "#### Contributors: Muoyo Okome, Jill Carrie"
+    "#### Contributors: Muoyo Okome, Jill Carrie\n",
+    "\n",
+    "<p><img src='../images/wordcloud.png' width=400>"
    ]
   },
   {
@@ -27,13 +29,14 @@
     "    - [Random Forest](#randomforest)\n",
     "    - [Adaboost](#adaboost)\n",
     "    - [Gradient Boost](#gradientboost)\n",
-    "5. [Recommendations & Next Steos](#recommendations)\n",
-    "6. [Vizualizations](#visualizations)"
+    "    - [Improved Results through Count Vectorization](#countvectorization)\n",
+    "5. [Vizualizations](#visualizations)\n",
+    "6. [Recommendations & Next Steps](#recommendations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1045,7 @@
    "metadata": {},
    "source": [
     "<a id='countvectorization'></a>\n",
-    "### Improved Results via Count Vectorization\n",
+    "### Improved Results through Count Vectorization\n",
     "\n",
     "In addition to our experiments with VADER, we also tried Count Vectorization, collecting the universal set of every word appearing in a review in our sample, and then transforming each review into a sparsely populated vector counting the number of times each word in the universal set occurs in that review so that we could use these vectors as predictors.\n",
     "\n",
@@ -1123,27 +1126,6 @@
    ],
    "source": [
     "lr.score(X_test_vector, y_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='recommendations'></a>\n",
-    "### Recommendations & Next Steps"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Through our analysis we've established the starting point for a framework by which the text of an Amazon review text can be used to predict the star rating associated with that review. Significant work remains in terms of improving the generalizatbility of these predictions so that they perform with a high degree of accuracy on new data outside of the training set. \n",
-    "\n",
-    "To accomplish this, we will continue to tune our models to find the optimal parameters and also seek to test additional models such as XGBoost, SVC, and Kernel Approximation. Further, we will seek to work with additional categories of data, and also explore the possibility of predicting only whether a review is \"good\" (4 or 5 stars) or \"bad\" (1 or 2 stars), which may be just as valuable or more valuable to a business as knowing the precise star rating.\n",
-    "\n",
-    "\n",
-    "\n",
-    "[Back to Top ↑](#top)"
    ]
   },
   {
@@ -1245,6 +1227,38 @@
     "\n",
     "[Back to Top ↑](#top)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='recommendations'></a>\n",
+    "### Recommendations & Next Steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Through our analysis we've established the starting point for a framework by which the text of an Amazon review text can be used to predict the star rating associated with that review. Significant work remains in terms of improving the generalizability of these predictions so that they perform with a high degree of accuracy on new data outside of the training set. \n",
+    "\n",
+    "To accomplish this, we will continue to tune our models to find the optimal parameters and also seek to test additional models such as XGBoost, SVC, and Kernel Approximation. Given the promise shown by our Count Vectorization experiments, continuing to explore that method and other NLP techniques should be helpful in continuing to improve the performance of our models.\n",
+    "\n",
+    "Further, we will seek to work with additional categories of data, and also explore the possibility of predicting only whether a review is \"good\" (4 or 5 stars) or \"bad\" (1 or 2 stars), which may be just as valuable or more valuable to a business as knowing the precise star rating.\n",
+    "\n",
+    "Our eventual goal is that our process can be deployed on customer conversations anywhere, in any form, allowing businesses to proceed up with the appropriate automated customer service response (either internal to the business or directly to the customer), based on the class of the message and perhaps other contextual data that may provide further clues and insights.\n",
+    "\n",
+    "\n",
+    "\n",
+    "[Back to Top ↑](#top)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
