--- a/notebooks/amazon.ipynb
+++ b/notebooks/amazon.ipynb
@@ -7,9 +7,9 @@
     "<a id='top'></a>\n",
     "## Can Amazon Reviews Help Businesses Learn their Best Customers? \n",
     "\n",
-    "#### Contributors: Muoyo Okome, Jill Carrie\n",
-    "\n",
-    "<p><img src='../images/wordcloud.png' width=400>"
+    "#### Contributors: Muoyo Okome, Jill Carrie<p>\n",
+    "    \n",
+    "<img src='../images/wordcloud.png' width=400 align='left'>"
    ]
   },
   {
