--- a/notebooks/amazon.ipynb
+++ b/notebooks/amazon.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "#### Contributors: Muoyo Okome, Jill Carrie<p>\n",
     "    \n",
-    "<img src='../images/wordcloud.png' width=400 align='left'>"
+    "![](../images/wordcloud.png)"
    ]
   },
   {
