--- a/notebooks/amazon.ipynb
+++ b/notebooks/amazon.ipynb
@@ -7,7 +7,7 @@
     "<a id='top'></a>\n",
     "## Can Amazon Reviews Help Businesses Learn their Best Customers? \n",
     "\n",
-    "#### Contributors: Muoyo Okome, Jill Carrie<p>\n",
+    "#### Contributors: Muoyo Okome, Jill Carrie\n",
     "    \n",
     "![](../images/wordcloud.png)"
    ]
