--- a/notebooks/amazon.ipynb
+++ b/notebooks/amazon.ipynb
@@ -7,9 +7,10 @@
     "<a id='top'></a>\n",
     "## Can Amazon Reviews Help Businesses Learn their Best Customers? \n",
     "\n",
-    "#### Contributors: Muoyo Okome, Jill Carrie\n",
+    "#### Contributors: Muoyo Okome, Jill Carrie<p align='left'>\n",
     "    \n",
-    "![](../images/wordcloud.png)"
+    "![](../images/wordcloud.png)\n",
+    "</p>"
    ]
   },
   {
