--- a/notebooks/amazon.ipynb
+++ b/notebooks/amazon.ipynb
@@ -7,10 +7,9 @@
     "<a id='top'></a>\n",
     "## Can Amazon Reviews Help Businesses Learn their Best Customers? \n",
     "\n",
-    "#### Contributors: Muoyo Okome, Jill Carrie<p align='left'>\n",
-    "    \n",
-    "![](../images/wordcloud.png)\n",
-    "</p>"
+    "#### Contributors: Muoyo Okome, Jill Carrie\n",
+    "\n",
+    "<p><img src='https://github.com/muoyo/amazon-reviews/blob/master/images/wordcloud.png?raw=true'>"
    ]
   },
   {
