--- a/notebooks/amazon.ipynb
+++ b/notebooks/amazon.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "#### Contributors: Muoyo Okome, Jill Carrie\n",
     "\n",
-    "<p><img src='https://github.com/muoyo/amazon-reviews/blob/master/images/wordcloud.png?raw=true'>"
+    "<p><img src='https://github.com/muoyo/amazon-reviews/blob/master/images/wordcloud.png?raw=true' align='left'>"
    ]
   },
   {
